--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-deploy",
- "homepage": "https://StaloneSerhii.github.io/vite-deploy/",
+  "homepage": "https://StaloneSerhii.github.io/vite-deploy/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.5",
+    "@vitejs/plugin-react": "^4.0.3",
     "axios": "^1.4.0",
     "browser-router": "^0.2.0",
     "formik": "^2.4.2",
